--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/pic04.jpg" alt="" /></div><div class="content">
 								<h2>SALVAMENTO ADULTOS</h2>
-								<p>El deporte es salud, entrenar en grupos es motivador, la energía se multiplica. Los adultos no se quieren quedar afuera, es por eso que este año sumamos actividades para quienes son amantes de la natación, del mar y se animan a más.<a href="" target="none"><blockquote>Información y Costos...</blockquote></a></p>
+								<p>El deporte es salud, entrenar en grupos es motivador, la energía se multiplica. Los adultos no se quieren quedar afuera, es por eso que este año sumamos actividades para quienes son amantes de la natación, del mar y se animan a más.<a href="salvamentoadultos.html" target="none"><blockquote>Información y Costos...</blockquote></a></p>
 							</div>
 						</section>
 					</section>
