agrega cambios graficos y correcciones varias

--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
 -->
 <html>
 	<head>
-		<title>ESCUELA DE MAR</title>
+		<title>ESCUELA DE MAR - Monte Hermoso</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<meta property="og:type" content="website"/>
+		<meta property="og:title" content="ESCUELA DE MAR - Monte Hermoso"/>
+		<meta property="og:image" content="http://escuelademar.alma-verde.org/images/logo-2.jpg"/>
+		<meta property="og:description" content="Una propuesta educativa de verano llevada a cabo por 	Guardavidas y Profesionales del Deporte Náutico y de la Educación. Con aprendizajes vivenciales desde el MAR, las OLAS y la PLAYA..."/>
 	</head>
 	<body class="landing is-preload">
 
@@ -29,7 +33,7 @@
 											<li><a href="index.html">Inicio</a></li>
 											<li><a href="salvamentojunior.html" target="none">Salvamento Junior</a></li>
 											<li><a href="escuelita.html" target="none">Escuelita de Mar</a></li>
-											<li><a href="salvamentoadultos.html" target="none">Salvamento Adulto</a></li>
+											<li><a href="salvamentoadultos.html" target="none">Salvamento Adultos</a></li>
 										</ul>
 										<div align="center"><img src="images/logoch.jpg" alt=""/></div>
 									</div>
@@ -41,13 +45,14 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>ESCUELA DE MAR</h2>
-							<p>MONTE HERMOSO<br/></p>
+							<img style="width: 400px; height: 400px; margin-bottom: 30px;" src="./images/logo.svg" />
 							<ul class="actions special">
 								<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdhw3tcOAzo9lEDAb6q3wtGHw5vDTSEyXbGBkDlIPkRS9WrzA/viewform?vc=0&c=0&w=1" target="none" class="button primary">INSCRIBITE</a></li>
+								<li><a href="https://api.whatsapp.com/send?phone=5491145541833&text=Hola!%20quiero%20saber%20mas%20sobre%20Escuela%20de%20Mar" target="none" class="icon fa-whatsapp button">CONTACTANOS</a></li>
+
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Conocenos</a>
+						<a href="#one" class="more scrolly">Mas información</a>
 					</section>
 
 				<!-- One -->
@@ -59,9 +64,8 @@
 								<p>Con aprendizajes vivenciales desde el MAR, las OLAS y la PLAYA</p>
 							</header>
 							<ul class="icons major">
-								<li><img src="images/logo1.jpg"></li>
-								<li><img src="images/logo.jpg"></li>
-								<li><img src="images/logo2.jpg"></li>
+								<li><a title="Alma Verde - Asociación Civil" href="http://alma-verde.org"><img src="images/logo1.jpg"></a></li>
+								<li><a title="Parador Prisma" href="#"><img src="images/logo2.jpg"></a></li>
 							</ul>
 						</div>
 					</section>
@@ -147,6 +151,8 @@
 							<li><a href="https://www.facebook.com/salvamentojuniormh/?modal=admin_todo_tour" target="none" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/salvamentojuniormh/?hl=es-la" target="none" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="mailto:info@alma-verde.org" target="none" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="https://api.whatsapp.com/send?phone=5491145541833&text=Hola!%20quiero%20saber%20mas%20sobre%20Escuela%20de%20Mar" target="none" class="icon fa-whatsapp"><span class="label">WhatsApp</span></a></li>
+
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
