--- a/salvamentoadultos.html
+++ b/salvamentoadultos.html
@@ -6,11 +6,15 @@
 -->
 <html>
 	<head>
-		<title>ESCUELA DE MAR - Salvamento Junior</title>
+		<title>ESCUELA DE MAR - Monte Hermoso</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<meta property="og:type" content="website"/>
+		<meta property="og:title" content="ESCUELA DE MAR - Monte Hermoso"/>
+		<meta property="og:image" content="http://escuelademar.alma-verde.org/images/logo-2.jpg"/>
+		<meta property="og:description" content="Una propuesta educativa de verano llevada a cabo por 	Guardavidas y Profesionales del Deporte Náutico y de la Educación. Con aprendizajes vivenciales desde el MAR, las OLAS y la PLAYA..."/>
 	</head>
 	<body class="is-preload">
 
@@ -19,7 +23,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">SALVAMENTO ADULTOS</a></h1>
+						<h1><a href="index.html">ESCUELA DE MAR</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -39,9 +43,9 @@
 
 				<!-- Main -->
 					<article id="main">
-						<header>
-							<h2>ESCUELA DE MAR</h2>
-							MONTE HERMOSO<br/></p>
+						<header style='background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(./images/pic04.jpg);'>
+							<h2>SALVAMENTO ADULTOS</h2>
+							<p>Para mayores de 18 años<br/></p>
 							<ul class="actions special">
 								<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdhw3tcOAzo9lEDAb6q3wtGHw5vDTSEyXbGBkDlIPkRS9WrzA/viewform?vc=0&c=0&w=1" target="none" class="button primary">INSCRIBITE</a></li>
 							</ul>
@@ -57,11 +61,11 @@
                                             <li>EDADES: mayores de 18 años.</li>
                                             <li>UBICACIÓN: Parador PRISMA BEACH, Juan Domingo Perón 810 <a href="https://www.google.com/maps/place/Parador+Soul+Beach/@-38.98916,-61.2918144,17z/data=!3m1!4b1!4m5!3m4!1s0x958d5307c8c6d1a9:0x155ae216f80cd05c!8m2!3d-38.98916!4d-61.2896257?hl=es-AR" target="none">Conoce como llegar.</li>
                                         </ul>
-                                    <P>El programa incluye: 
+                                    <P>El programa incluye:
 										<ul>
 											<li>Una jornada de 4 horas de duración con entrenamientos y actividades teórico-prácticas.</li>
 											<li>Colaciones frutales y agua durante toda la jornada.</li>
-										</ul> 
+										</ul>
 									</P>
 								</section>
 								<section>
@@ -90,7 +94,7 @@
 											<li>CONTADO/EFECTIVO</li>
 											<li>MERCADO PAGO</li>
 											<li>POR TRANFERENCIA BANCARIA</li>
-										</ul> 
+										</ul>
 										<blockquote><STRONG>El cupo será reservado abonando el 50% de la inscripción.</STRONG></blockquote>
 
 									<h4>NO TE QUEDES SIN TU LUGAR, SERÁ UN VERANO INNOLVIDABLE!!!</h4>
@@ -108,6 +112,8 @@
 							<li><a href="https://www.facebook.com/salvamentojuniormh/?modal=admin_todo_tour" target="none" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/salvamentojuniormh/?hl=es-la" target="none" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="mailto:info@alma-verde.org" target="none" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="https://api.whatsapp.com/send?phone=5491145541833&text=Hola!%20quiero%20saber%20mas%20sobre%20Escuela%20de%20Mar" target="none" class="icon fa-whatsapp"><span class="label">WhatsApp</span></a></li>
+							
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
