corrige campos de opengraph

--- a/salvamentoadultos.html
+++ b/salvamentoadultos.html
@@ -12,8 +12,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<meta property="og:type" content="website"/>
-		<meta property="og:title" content="ESCUELA DE MAR - Monte Hermoso"/>
-		<meta property="og:image" content="http://escuelademar.alma-verde.org/images/logo-2.jpg"/>
+		<meta property="og:title" content="Salvamento Adultos en ESCUELA DE MAR - Monte Hermoso"/>
+		<meta property="og:image" content="http://escuelademar.alma-verde.org/images/pic04.jpg"/>
 		<meta property="og:description" content="Una propuesta educativa de verano llevada a cabo por 	Guardavidas y Profesionales del Deporte Náutico y de la Educación. Con aprendizajes vivenciales desde el MAR, las OLAS y la PLAYA..."/>
 	</head>
 	<body class="is-preload">
@@ -113,7 +113,7 @@
 							<li><a href="https://www.instagram.com/salvamentojuniormh/?hl=es-la" target="none" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="mailto:info@alma-verde.org" target="none" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							<li><a href="https://api.whatsapp.com/send?phone=5491145541833&text=Hola!%20quiero%20saber%20mas%20sobre%20Escuela%20de%20Mar" target="none" class="icon fa-whatsapp"><span class="label">WhatsApp</span></a></li>
-							
+
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
