--- a/escuelita.html
+++ b/escuelita.html
@@ -12,9 +12,9 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<meta property="og:type" content="website"/>
-		<meta property="og:title" content="ESCUELA DE MAR - Monte Hermoso"/>
-		<meta property="og:image" content="http://escuelademar.alma-verde.org/images/logo-2.jpg"/>
-		<meta property="og:description" content="Una propuesta educativa de verano llevada a cabo por 	Guardavidas y Profesionales del Deporte Náutico y de la Educación. Con aprendizajes vivenciales desde el MAR, las OLAS y la PLAYA..."/>
+		<meta property="og:title" content="Escuelita de Mar en ESCUELA DE MAR - Monte Hermoso"/>
+		<meta property="og:image" content="http://escuelademar.alma-verde.org/images/pic03.jpg"/>
+		<meta property="og:description" content="Una propuesta educativa de verano llevada a cabo por Guardavidas y Profesionales del Deporte Náutico y de la Educación. Con aprendizajes vivenciales desde el MAR, las OLAS y la PLAYA..."/>
 	</head>
 	<body class="is-preload">
 
