corrige logo y agrega direccion

--- a/escuelita.html
+++ b/escuelita.html
@@ -130,7 +130,8 @@
 
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li><b>Parador PRISMA Beach</b> (Pte. Perón 208, Costanera, Monte Hermoso, Argentina)</li>
+
 						</ul>
 					</footer>
 
