--- a/salvamentojunior.html
+++ b/salvamentojunior.html
@@ -13,7 +13,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<meta property="og:type" content="website"/>
 		<meta property="og:title" content="Salvamento Junior en ESCUELA DE MAR - Monte Hermoso"/>
-		<meta property="og:image" content="http://escuelademar.alma-verde.org/images/pic02.jpeg"/>
+		<meta property="og:image" content="http://escuelademar.alma-verde.org/images/pic02.jpg"/>
 		<meta property="og:description" content="Una propuesta educativa de verano llevada a cabo por 	Guardavidas y Profesionales del Deporte Náutico y de la Educación. Con aprendizajes vivenciales desde el MAR, las OLAS y la PLAYA..."/>
 	</head>
 	<body class="is-preload">
@@ -127,7 +127,8 @@
 
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li><b>Parador PRISMA Beach</b> (Pte. Perón 208, Costanera, Monte Hermoso, Argentina)</li>
+
 						</ul>
 					</footer>
 
