--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<img style="width: 400px; height: 400px; margin-bottom: 30px;" src="./images/logo.svg" />
+							<img id='logo' src="./images/logo.svg" />
 							<ul class="actions special">
 								<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdhw3tcOAzo9lEDAb6q3wtGHw5vDTSEyXbGBkDlIPkRS9WrzA/viewform?vc=0&c=0&w=1" target="none" class="button primary">INSCRIBITE</a></li>
 								<li><a href="https://api.whatsapp.com/send?phone=5491145541833&text=Hola!%20quiero%20saber%20mas%20sobre%20Escuela%20de%20Mar" target="none" class="icon fa-whatsapp button">CONTACTANOS</a></li>
@@ -155,7 +155,8 @@
 
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li><b>Parador PRISMA Beach</b> (Pte. Perón 208, Costanera, Monte Hermoso, Argentina)</li>
+
 						</ul>
 					</footer>
 
