--- a/salvamentojunior.html
+++ b/salvamentojunior.html
@@ -59,7 +59,7 @@
                                             <li>DÍAS: Lunes, Miércoles y Viernes, con excepción de la primer y la última semana de Enero que serán diferenciadas.</li>
                                             <li>HORARIO: de 10 a 13 hs.</li>
                                             <li>EDADES: de 8 a 17 años.</li>
-                                            <li>UBICACIÓN: Parador PRISMA BEACH, Juan Domingo Perón 810 <a href="https://www.google.com/maps/place/Parador+Soul+Beach/@-38.98916,-61.2918144,17z/data=!3m1!4b1!4m5!3m4!1s0x958d5307c8c6d1a9:0x155ae216f80cd05c!8m2!3d-38.98916!4d-61.2896257?hl=es-AR" target="none">.Conoce como llegar.</li>
+                                            <li>UBICACIÓN: Parador PRISMA BEACH, Juan Domingo Perón 208 <a href="CIV, Juan Domingo Perón 810, B8153 Monte Hermoso, Buenos Aires" target="none">.Conoce como llegar.</li>
                                         </ul>
 									<P>El programa semanal completo incluye:
 										<ul>
