--- a/escuelita.html
+++ b/escuelita.html
@@ -59,7 +59,7 @@
                                             <li>DÍAS: De Lunes a Viernes.</li>
                                             <li>HORARIO: de 10 a 13 hs.</li>
                                             <li>EDADES: de 4 a 12 años.</li>
-                                            <li>UBICACIÓN: Parador PRISMA BEACH, Juan Domingo Perón 810 <a href="https://www.google.com/maps/place/Parador+Soul+Beach/@-38.98916,-61.2918144,17z/data=!3m1!4b1!4m5!3m4!1s0x958d5307c8c6d1a9:0x155ae216f80cd05c!8m2!3d-38.98916!4d-61.2896257?hl=es-AR" target="none">. Conoce como llegar.</li>
+                                            <li>UBICACIÓN: Parador PRISMA BEACH, Juan Domingo Perón 208 <a href="https://www.google.com/maps/place/Parador+Prisma+Beach/@-38.9858191,-61.3078785,14z/data=!4m8!1m2!2m1!1sprisma+beach+monte+hermoso!3m4!1s0x0:0xadaa24fc21d0c216!8m2!3d-38.9892317!4d-61.2896293" target="none">. Conoce como llegar.</li>
                                         </ul>
 									<P>El programa puede ser diario o semanal e incluye:
 										<ul>
