--- a/salvamentojunior.html
+++ b/salvamentojunior.html
@@ -59,7 +59,7 @@
                                             <li>DÍAS: Lunes, Miércoles y Viernes, con excepción de la primer y la última semana de Enero que serán diferenciadas.</li>
                                             <li>HORARIO: de 10 a 13 hs.</li>
                                             <li>EDADES: de 8 a 17 años.</li>
-                                            <li>UBICACIÓN: Parador PRISMA BEACH, Juan Domingo Perón 208 <a href="CIV, Juan Domingo Perón 810, B8153 Monte Hermoso, Buenos Aires" target="none">.Conoce como llegar.</li>
+                                            <li>UBICACIÓN: Parador PRISMA BEACH, Juan Domingo Perón 208 <a href="https://www.google.com/maps/place/Parador+Prisma+Beach/@-38.9858191,-61.3078785,14z/data=!4m8!1m2!2m1!1sprisma+beach+monte+hermoso!3m4!1s0x0:0xadaa24fc21d0c216!8m2!3d-38.9892317!4d-61.2896293" target="none">.Conoce como llegar.</li>
                                         </ul>
 									<P>El programa semanal completo incluye:
 										<ul>
