--- a/salvamentojunior.html
+++ b/salvamentojunior.html
@@ -72,7 +72,7 @@
 								</section>
 								<section>
 									<h3>COSTOS DEL PROGRAMA</h3>
-									<blockquote>Mantenemos los precios del año pasado!!!</blockquote>
+									<blockquote>Tenemos descuentos para residentes!!!</blockquote>
 
 									<div class="table-wrapper">
 										<table>
@@ -89,7 +89,7 @@
 												</tr>
 												<tr>
 													<td>QUINCENAL</td>
-													<td>3.600 $ </td>
+													<td>3.800 $ </td>
 												</tr>
 												<tr>
 													<td>MENSUAL</td>
