--- a/escuelita.html
+++ b/escuelita.html
@@ -72,6 +72,7 @@
 								</section>
 								<section>
 									<h3>COSTOS DEL PROGRAMA</h3>
+									<blockquote>Tenemos descuentos para residentes!!!</blockquote>
 
 									<div class="table-wrapper">
 										<table>
