--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<meta property="og:type" content="website"/>
 		<meta property="og:title" content="ESCUELA DE MAR - Monte Hermoso"/>
 		<meta property="og:image" content="http://escuelademar.alma-verde.org/images/logo-2.jpeg"/>
-		<meta property="og:description" content="Una propuesta educativa de verano llevada a cabo por 	Guardavidas y Profesionales del Deporte Náutico y de la Educación. Con aprendizajes vivenciales desde el MAR, las OLAS y la PLAYA..."/>
+		<meta property="og:description" content="UNA PROPUESTA DE VERANO LLEVADA A CABO POR GUARDAVIDAS, INSTRUCTURES DE NAUTICA Y PROFESIONALES DE LA EDUCACIÓN. Con aprendizajes vivenciales en el MAR y la PLAYA..."/>
 	</head>
 	<body class="landing is-preload">
 
@@ -31,9 +31,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Inicio</a></li>
-											<li><a href="salvamentojunior.html" target="none">Salvamento Junior</a></li>
-											<li><a href="escuelita.html" target="none">Escuelita de Mar</a></li>
-											<li><a href="salvamentoadultos.html" target="none">Salvamento Adultos</a></li>
+											<li><a href="informaciónycostos.html" target="none">Información y Costos</a></li>
 										</ul>
 										<div align="center"><img src="images/logoch.jpg" alt=""/></div>
 									</div>
@@ -48,7 +46,7 @@
 							<img id='logo' src="./images/logo.svg" />
 							<ul class="actions special">
 								<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdhw3tcOAzo9lEDAb6q3wtGHw5vDTSEyXbGBkDlIPkRS9WrzA/viewform?vc=0&c=0&w=1" target="none" class="button primary">INSCRIBITE</a></li>
-								<li><a href="https://api.whatsapp.com/send?phone=5492914025129&text=Hola!%20quiero%20saber%20mas%20sobre%20Escuela%20de%20Mar" target="none" class="icon fa-whatsapp button">CONTACTANOS</a></li>
+								<li><a href="https://api.whatsapp.com/send?phone=5492914321082&text=Hola!%20quiero%20saber%20mas%20sobre%20Escuela%20de%20Mar" target="none" class="icon fa-whatsapp button">CONTACTANOS</a></li>
 
 							</ul>
 						</div>
@@ -59,9 +57,9 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Una propuesta educativa de verano llevada a cabo por<br />
-								Guardavidas y  Profesionales del Deporte Náutico y de la Educación</h2>
-								<p>Con aprendizajes vivenciales desde el MAR, las OLAS y la PLAYA</p>
+								<h2>Una propuesta educativa de verano llevada a cabo por<br/>
+								Guardavidas, Instructores de Náutica y Profesionales de la Educación</h2>
+								<p>Con aprendizajes vivenciales en el MAR y la PLAYA</p>
 							</header>
 							<ul class="icons major">
 								<li><a title="Alma Verde - Asociación Civil" href="http://alma-verde.org"><img src="images/logo1.jpg"></a></li>
@@ -75,21 +73,21 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
 								<h2>SALVAMENTO JUNIOR</h2>
-								<p>Una escuela con aprendizajes vivenciales desde el MAR, las OLAS y la PLAYA.<br />
-								Con prácticas deportivas que incluyen la natación, la preparación física en la arena y el salvamento, así como la formación integral de niños y niñas que puedan desenvolverse en el medio acuático con seguridad, así como también en cualquier situación que implique la activación de la cadena de emergencia. <a href="salvamentojunior.html" target="none"><blockquote>Información y Costos...</blockquote></a></p>
+								<p>Una escuela que se basa en aprendizajes vivenciales en el MAR.<br />
+								Prácticas deportivas que incluyen natación, preparación física en la arena y salvamento, como parte de la formación integral para que, quienes hagan la experiencia, sepan desenvolverse en el medio acuático con seguridad, así como también actúen de forma correcta ante cualquier situación de emergencia. <a href="salvamentojunior.html" target="none"><blockquote>Información y Costos...</blockquote></a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>ESCUELITA DE MAR</h2>
-								<p>Los más peques tienen su lugar. A través del juego, los niños y niñas conocen y aprenden las primeras nociones sobre la náutica y la navegación a vela.<br/>
-								Es un deporte ideal para acompañar el crecimiento por alentar el compañerismo, solidaridad y el trabajo en equipo, fomentando el cumplimiento de las reglas, el juego limpio y el respeto por el prójimo, ambos valores esenciales para la vida en comunidad.<a href="escuelita.html" target="none"><blockquote>Información y Costos...</blockquote></a></p>
+								<p>La Escuelita de Mar es una actividad donde, a través de diferentes juegos, los niños y niñas conocen, aprenden y experimentan las primeras ideas sobre la navegación a vela, tabla de surf y náutica en general.<br/>
+								Contando la posibilidad de aprender en el mar, o bien, realizar en la playa otro tipo de actividades recreativas y de preparación física afines con el deporte.<a href="escuelita.html" target="none"><blockquote>Información y Costos...</blockquote></a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic04.jpg" alt="" /></div><div class="content">
 								<h2>SALVAMENTO ADULTOS</h2>
-								<p>El deporte es salud, entrenar en grupos es motivador, la energía se multiplica. Los adultos no se quieren quedar afuera, es por eso que este año sumamos actividades para quienes son amantes de la natación, del mar y se animan a más.<a href="salvamentoadultos.html" target="none"><blockquote>Información y Costos...</blockquote></a></p>
+								<p>El deporte es salud, entrenar en grupos es motivador, la energía se multiplica. Para los adultos que no quieren quedarse afuera, este año sumamos actividades para quienes son amantes de la natación y el mar.<a href="salvamentoadultos.html" target="none"><blockquote>Información y Costos...</blockquote></a></p>
 							</div>
 						</section>
 					</section>
@@ -99,9 +97,8 @@
 						<div class="inner">
 							<header class="major">
 								<h2>un programa que se desarrollará en la playa y en el mar, entorno al que debemos conocer, proteger y conservar.</h2>
-								<p>Nuestras actividades serán complementadas con las herramientas que nos da la EDUCACIÓN AMBIENTAL, <br />
-								buscando desarrollar conciencia ética y colectiva sobre todas las formas de vida con las cuales <br />
-								compartimos este planeta y la importancia de su cuidado, como verdaderos GUARDIANES DEL AMBIENTE.</p>
+								<p>Nuestras actividades serán complementadas con la EDUCACIÓN AMBIENTAL,buscando desarrollar conciencia ética y colectiva <br />
+								sobre todas las formas de vida con las cuales compartimos este planeta y la importancia de su cuidado, como verdaderos GUARDIANES DEL AMBIENTE.</p>
 							</header>
 							<ul class="features">
 								<li>
