--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Inicio</a></li>
-											<li><a href="informaciónycostos.html" target="none">Información y Costos</a></li>
+											<li><a href="escuelita.html" target="none">Información y Costos</a></li>
 										</ul>
 										<div align="center"><img src="images/logoch.jpg" alt=""/></div>
 									</div>
