--- a/escuelita.html
+++ b/escuelita.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<meta property="og:type" content="website"/>
-		<meta property="og:title" content="Escuelita de Mar en ESCUELA DE MAR - Monte Hermoso"/>
+		<meta property="og:title" content="ESCUELA DE MAR - Monte Hermoso"/>
 		<meta property="og:image" content="http://escuelademar.alma-verde.org/images/pic03.jpg"/>
 		<meta property="og:description" content="Una propuesta educativa de verano llevada a cabo por Guardavidas y Profesionales del Deporte Náutico y de la Educación. Con aprendizajes vivenciales desde el MAR, las OLAS y la PLAYA..."/>
 	</head>
@@ -23,7 +23,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">ESCUELA DE MAR</a></h1>
+						<h1><a href="index.html">INFORMACION Y COSTOS</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -31,8 +31,6 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Inicio</a></li>
-											<li><a href="salvamentojunior.html" target="none">Salvamento Junior</a></li>
-											<li><a href="salvamentoadultos.html" target="none">Salvamento Adultos</a></li>
 										</ul>
 										<div align="center"><img src="images/logoch.jpg" alt=""/></div>
 									</div>
@@ -44,8 +42,7 @@
 				<!-- Main -->
 					<article id="main">
 						<header style='background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(./images/pic03.jpg);'>
-							<h2>ESCUELITA DE MAR</h2>
-							<p>Para chicas y chicos de 4 a 12 años<br/></p>
+							<h2>ESCUELA DE MAR</h2>
 							<ul class="actions special">
 								<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdhw3tcOAzo9lEDAb6q3wtGHw5vDTSEyXbGBkDlIPkRS9WrzA/viewform?vc=0&c=0&w=1" target="none" class="button primary">INSCRIBITE</a></li>
 							</ul>
@@ -54,13 +51,14 @@
 							<div class="inner">
 
 								<section>
-									<h3>INFORMACIÓN GENERAL</h3>
+									<h3>CURSO DE VERANO 2021</h3>
                                         <ul>
-                                            <li>DÍAS: De Lunes a Viernes.</li>
+                                            <li>LUGAR: Parador PRISMA BEACH, Juan Domingo Perón 208 <a href="https://www.google.com/maps/place/Parador+Prisma+Beach/@-38.9858191,-61.3078785,14z/data=!4m8!1m2!2m1!1sprisma+beach+monte+hermoso!3m4!1s0x0:0xadaa24fc21d0c216!8m2!3d-38.9892317!4d-61.2896293" target="none">. Conoce como llegar.</li>
+                                            <li>DÍAS: Lunes, Miércoles y Viernes.</li>
+                                            <li>DÍAS SALVAMENTO ADULTXS: A confirmar...</li>
                                             <li>HORARIO: de 10 a 13 hs.</li>
-                                            <li>EDADES: de 4 a 12 años.</li>
-                                            <li>UBICACIÓN: Parador PRISMA BEACH, Juan Domingo Perón 208 <a href="https://www.google.com/maps/place/Parador+Prisma+Beach/@-38.9858191,-61.3078785,14z/data=!4m8!1m2!2m1!1sprisma+beach+monte+hermoso!3m4!1s0x0:0xadaa24fc21d0c216!8m2!3d-38.9892317!4d-61.2896293" target="none">. Conoce como llegar.</li>
-                                        </ul>
+                                            <li>EDADES: de 4 a 17 años y > de 18 años Salvamento adultxs.</li>
+                                                                                    </ul>
 									<P>El programa puede ser diario o semanal e incluye:
 										<ul>
 											<li>Recreación y actividades teórico y prácticas.</li>
@@ -68,11 +66,11 @@
 										</ul>
 									</P>
 									<h5></h5>
-									<blockquote>En caso de familias con hermanos/as interesados/as se ofrece un 10 % de descuento sobre el total.</blockquote>
+									<blockquote>En caso de familias con hermanos/as que participen de la propuesta se ofrece un 10 % de descuento sobre el total.</blockquote>
 								</section>
 								<section>
-									<h3>COSTOS DEL PROGRAMA</h3>
-									<blockquote>Tenemos descuentos para residentes!!!</blockquote>
+									<h3>COSTOS</h3>
+									<blockquote>Tenemos un 30% de descuento para miembros de Alma Verde y para residentes de Monte Hermoso!!!</blockquote>
 
 									<div class="table-wrapper">
 										<table>
@@ -85,20 +83,26 @@
 											<tbody>
 												<tr>
 													<td>DIARIO </td>
-													<td>700 $</td>
+													<td>1200 $</td>
 												</tr>
 												<tr>
-													<td>SEMANAL</td>
+													<td>1° SEMANA</td>
 													<td>3.000 $</td>
 												</tr>
 												<tr>
-													<td>QUINCENAL</td>
-													<td>5.400 $</td>
+													<td>2° SEMANA</td>
+													<td>2.700 $ (10% off)</td>
+												</tr>
+												<tr>
+													<td>3° y 4° SEMANA</td>
+													<td>2.400 $ (20% off)</td>
 												</tr>
 												<tr>
 													<td>MENSUAL</td>
-													<td>10.000 $</td>
+													<td>10.000 $ 
+													<blockquote>(si te inscribís antes del 30/12 pagas $9.000)</blockquote></td>
 												</tr>
+				
 											</tbody>
 										</table>
 									</div>
@@ -107,8 +111,8 @@
 									<h3>FORMAS DE PAGO</h3>
 										<ul>
 											<li>CONTADO/EFECTIVO</li>
-											<li>MERCADO PAGO</li>
-											<li>POR TRANFERENCIA BANCARIA</li>
+											<li>MERCADO PAGO (10% de interés)</li>
+											<li>POR TRANSFERENCIA BANCARIA</li>
 										</ul>
 										<blockquote><STRONG>El cupo será reservado abonando el 50% de la inscripción.</STRONG></blockquote>
 
