--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
 								<h2>SALVAMENTO JUNIOR</h2>
 								<p>Una escuela que se basa en aprendizajes vivenciales en el MAR.<br />
-								Prácticas deportivas que incluyen natación, preparación física en la arena y salvamento, como parte de la formación integral para que, quienes hagan la experiencia, sepan desenvolverse en el medio acuático con seguridad, así como también actúen de forma correcta ante cualquier situación de emergencia. <a href="salvamentojunior.html" target="none"><blockquote>Información y Costos...</blockquote></a></p>
+								Prácticas deportivas que incluyen natación, preparación física en la arena y salvamento, como parte de la formación integral para que, quienes hagan la experiencia, sepan desenvolverse en el medio acuático con seguridad, así como también actúen de forma correcta ante cualquier situación de emergencia. <a href="escuelita.html" target="none"><blockquote>Información y Costos...</blockquote></a></p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -87,7 +87,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/pic04.jpg" alt="" /></div><div class="content">
 								<h2>SALVAMENTO ADULTOS</h2>
-								<p>El deporte es salud, entrenar en grupos es motivador, la energía se multiplica. Para los adultos que no quieren quedarse afuera, este año sumamos actividades para quienes son amantes de la natación y el mar.<a href="salvamentoadultos.html" target="none"><blockquote>Información y Costos...</blockquote></a></p>
+								<p>El deporte es salud, entrenar en grupos es motivador, la energía se multiplica. Para los adultos que no quieren quedarse afuera, este año sumamos actividades para quienes son amantes de la natación y el mar.<a href="escuelita.html" target="none"><blockquote>Información y Costos...</blockquote></a></p>
 							</div>
 						</section>
 					</section>
