--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<meta property="og:type" content="website"/>
-		<meta property="og:title" content="ESCUELA DE MAR - Monte Hermoso"/>
+		<meta property="og:title" content="ESCUELA DE MAR 2022 - Monte Hermoso"/>
 		<meta property="og:image" content="http://escuelademar.alma-verde.org/images/logo-2.jpeg"/>
 		<meta property="og:description" content="UNA PROPUESTA DE VERANO LLEVADA A CABO POR GUARDAVIDAS, INSTRUCTURES DE NAUTICA Y PROFESIONALES DE LA EDUCACIÓN. Con aprendizajes vivenciales en el MAR y la PLAYA..."/>
 	</head>
