--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Inicio</a></li>
-											<li><a href="escuelita.html" target="none">Información y Costos</a></li>
+											<li><a href="escuelita.html" target="none">Más información</a></li>
 										</ul>
 										<div align="center"><img src="images/logoch.jpg" alt=""/></div>
 									</div>
@@ -46,7 +46,7 @@
 						<div class="inner">
 							<img id='logo' src="./images/logo.svg" />
 							<ul class="actions special">
-								<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdhw3tcOAzo9lEDAb6q3wtGHw5vDTSEyXbGBkDlIPkRS9WrzA/viewform?vc=0&c=0&w=1" target="none" class="button primary">INSCRIBITE</a></li>
+								<li><a href="https://docs.google.com/forms/d/1_MpxA7KcOrIctma2TaivkP7YuRRmunAvyLAbcY0UNrQ/edit?usp=sharing" target="none" class="button primary">INSCRIBITE</a></li>
 								<li><a href="https://api.whatsapp.com/send?phone=5492914321082&text=Hola!%20quiero%20saber%20mas%20sobre%20Escuela%20de%20Mar" target="none" class="icon fa-whatsapp button">CONTACTANOS</a></li>
 
 							</ul>
@@ -58,9 +58,10 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Una propuesta educativa de verano llevada a cabo por<br/>
-								Guardavidas, Instructores de Náutica y Profesionales de la Educación</h2>
-								<p>Con aprendizajes vivenciales en el MAR y la PLAYA</p>
+								<h2>Somos una propuesta turística y educativa<br/>
+								basada en aprendizajes y vivencias sobre el MAR y la PLAYA<br/>
+								contamos con un equipo exclusivamente conformado por PROFESIONALES</h2>
+								<p>Guardavidas, Docentes e Instructores Certificados</p>
 							</header>
 							<ul class="icons major">
 								<li><a title="Alma Verde - Asociación Civil" href="http://alma-verde.org"><img src="images/logo1.jpg"></a></li>
