--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
 							<ul class="features">
 								<li>
 									<h3>Entrenamientos en el mar y con elementos de rescate</h3>
-									<p>Entradas al mar, natación en aguas abiertas, riñonadas y nado con cabeza afuera, además del reconocimiento y la utilización de torpedos, zunchos y de tablas de surf como elementos de rescate.</p>
+									<p>Prácticas deportivas de salvamento, nados en aguas abiertas, preparación física en la arena, juegos y recreación</p>
 								</li>
 								<li>
-									<h3>Deporte náutico para niños y niñas</h3>
-									<p>Contamos con Optimist (embarcación a vela para niños), Kayaks y Tablas de sup para que los chicos puedan experimentar en las distintas embarcaciones. La vela ligera es una actividad completa que ejercita la concentración, la motricidad, la autonomía, la rapidez en la toma de decisiones y comprende conocimientos técnicos y teóricos.</p>
+									<h3>Vientos, Corrientes y Mareas</h3>
+									<p>Realizamos instancias teóricas sobre lectura de vientos, corrientes y mareas, interpretación de la topografía de la playa.</p>
 								</li>
 								<li>
 									<h3>Nociones básicas del surf</h3>
@@ -120,12 +120,12 @@
 									<p>Enseñanza teórica y práctica de las nociones básicas de los primeros auxilios y el RCP.El botiquín de primeros auxilios. La comunicación en la playa y la activación de la cadena de emergencia.</p>
 								</li>
 								<li>
-									<h3>Topografía de la playa, vientos y mareas</h3>
-									<p>Conocer el mar, sus canales, sus corrientes de retorno. Los puntos cardinales y los vientos. Las mareas y la tabla de mareas.</p>
+									<h3>Simulación de rescates y recreación</h3>
+									<p>Mediante el juego y la recreación simularemos rescates sintiendonos verdaderos Guardavidas Juniors.</p>
 								</li>
 								<li>
-									<h3>Simulación de rescates y recreación</h3>
-									<p>Mediante el juego y la recreación simularemos rescates sintiendonos Guardavidas Juniors.</p>
+									<h3>Un aprendizaje integral</h3>
+									<p>Buscamos fomentar valores a través del deporte tales como la Honestidad, el Compañerismo, la Perseverancia y la Empatía.</p>
 								</li>
 							</ul>
 						</div>
@@ -138,7 +138,7 @@
 								<h2>Vení a vivir un verano inolvidable en la Escuela de Mar de Monte Hermoso</h2>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdhw3tcOAzo9lEDAb6q3wtGHw5vDTSEyXbGBkDlIPkRS9WrzA/viewform?vc=0&c=0&w=1" target="none" class="button fit primary">INSCRIBITE</a></li>
+								<li><a href="https://docs.google.com/forms/d/1_MpxA7KcOrIctma2TaivkP7YuRRmunAvyLAbcY0UNrQ/edit?usp=sharing" target="none" class="button fit primary">INSCRIBITE</a></li>
 							</ul>
 						</div>
 					</section>
@@ -146,7 +146,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="https://www.facebook.com/salvamentojuniormh/?modal=admin_todo_tour" target="none" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://web.facebook.com/escuelademarmh" target="none" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/escuelademarmh/" target="none" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="mailto:info@alma-verde.org" target="none" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							<li><a href="https://api.whatsapp.com/send?phone=5492914321082&text=Hola!%20quiero%20saber%20mas%20sobre%20Escuela%20de%20Mar" target="none" class="icon fa-whatsapp"><span class="label">WhatsApp</span></a></li>
