--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Somos una propuesta turística y educativa<br/>
+								<h2>Una propuesta turística y educativa<br/>
 								basada en aprendizajes y vivencias sobre el MAR y la PLAYA<br/>
-								contamos con un equipo exclusivamente conformado por PROFESIONALES</h2>
-								<p>Guardavidas, Docentes e Instructores Certificados</p>
+								contamos con un equipo exclusivamente conformado por PROFESIONALES<br/>
+								GUARDAVIDAS, DOCENTES E INSTRUCTORES CERTIFICADOS</h2>
 							</header>
 							<ul class="icons major">
 								<li><a title="Alma Verde - Asociación Civil" href="http://alma-verde.org"><img src="images/logo1.jpg"></a></li>
@@ -76,20 +76,20 @@
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
 								<h2>SALVAMENTO JUNIOR</h2>
 								<p>Una escuela que se basa en aprendizajes vivenciales en el MAR.<br />
-								Prácticas deportivas que incluyen natación, preparación física en la arena y salvamento, como parte de la formación integral para que, quienes hagan la experiencia, sepan desenvolverse en el medio acuático con seguridad, así como también actúen de forma correcta ante cualquier situación de emergencia. <a href="escuelita.html" target="none"><blockquote>Información y Costos...</blockquote></a></p>
+								Prácticas deportivas que incluyen natación, preparación física en la arena y salvamento, como parte de la formación integral para que, quienes hagan la experiencia, sepan desenvolverse en el medio acuático con seguridad, así como también actúen de forma correcta ante cualquier situación de emergencia. <a href="escuelita.html" target="none"><blockquote>Más información...</blockquote></a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>ESCUELITA DE MAR</h2>
-								<p>La Escuelita de Mar es una actividad donde, a través de diferentes juegos, los niños y niñas conocen, aprenden y experimentan las primeras ideas sobre la navegación a vela, tabla de surf y náutica en general.<br/>
-								Contando la posibilidad de aprender en el mar, o bien, realizar en la playa otro tipo de actividades recreativas y de preparación física afines con el deporte.<a href="escuelita.html" target="none"><blockquote>Información y Costos...</blockquote></a></p>
+								<p>La Escuelita de Mar es una actividad donde, a través de diferentes juegos, los niños y niñas conocen, aprenden y experimentan las primeras ideas sobre el salvamento acuático, el surf y el bodyboard.<br/>
+								<a href="escuelita.html" target="none"><blockquote>Más información...</blockquote></a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic04.jpg" alt="" /></div><div class="content">
 								<h2>SALVAMENTO ADULTOS</h2>
-								<p>El deporte es salud, entrenar en grupos es motivador, la energía se multiplica. Para los adultos que no quieren quedarse afuera, este año sumamos actividades para quienes son amantes de la natación y el mar.<a href="escuelita.html" target="none"><blockquote>Información y Costos...</blockquote></a></p>
+								<p>El deporte es salud, entrenar en grupos es motivador, la energía se multiplica. Para los adultos que no quieren quedarse afuera, este año sumamos actividades para quienes son amantes de la natación y el mar.<a href="escuelita.html" target="none"><blockquote>Más información...</blockquote></a></p>
 							</div>
 						</section>
 					</section>
