--- a/escuelita.html
+++ b/escuelita.html
@@ -23,7 +23,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">INFORMACION Y COSTOS</a></h1>
+						<h1><a href="index.html">INFORMACION GENERAL</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -44,14 +44,14 @@
 						<header style='background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(./images/pic03.jpg);'>
 							<h2>ESCUELA DE MAR</h2>
 							<ul class="actions special">
-								<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdhw3tcOAzo9lEDAb6q3wtGHw5vDTSEyXbGBkDlIPkRS9WrzA/viewform?vc=0&c=0&w=1" target="none" class="button primary">INSCRIBITE</a></li>
+								<li><a href="https://docs.google.com/forms/d/1_MpxA7KcOrIctma2TaivkP7YuRRmunAvyLAbcY0UNrQ/edit?usp=sharing" target="none" class="button primary">INSCRIBITE</a></li>
 							</ul>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
 
 								<section>
-									<h3>CURSO DE VERANO 2022</h3>
+									<h3>CURSO DE VERANO 2023</h3>
                                         <ul>
                                             <li>LUGAR: Parador PRISMA BEACH, Juan Domingo Perón 208 <a href="https://www.google.com/maps/place/Parador+Prisma+Beach/@-38.9858191,-61.3078785,14z/data=!4m8!1m2!2m1!1sprisma+beach+monte+hermoso!3m4!1s0x0:0xadaa24fc21d0c216!8m2!3d-38.9892317!4d-61.2896293" target="none">. Conoce como llegar.</li>
                                             <li>DÍAS: Lunes, Miércoles y Viernes.</li>
@@ -61,59 +61,18 @@
                                                                                     </ul>
 									<P>El programa puede ser diario o semanal e incluye:
 										<ul>
-											<li>Recreación y actividades teórico y prácticas.</li>
-											<li>Colaciones frutales y agua durante la mañana.</li>
+											<li>Todas las actividades de la escuela.</li>
+											<li>Colaciones frutales e hidratación durante la jornada.</li>
 										</ul>
 									</P>
-									<h5></h5>
-									<blockquote>En caso de familias con hermanos/as que participen de la propuesta se ofrece un 10 % de descuento sobre el total.</blockquote>
 								</section>
 								<section>
-									<h3>COSTOS</h3>
-									<blockquote>Tenemos un 20% de descuento para miembros de Alma Verde y para residentes de Monte Hermoso!!!</blockquote>
-
-									<div class="table-wrapper">
-										<table>
-											<thead>
-												<tr>
-													<th>PROGRAMA</th>
-													<th>PRECIO</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>DIARIO </td>
-													<td>2.000 $</td>
-												</tr>
-												<tr>
-													<td>1° SEMANA</td>
-													<td>5.000 $</td>
-												</tr>
-												<tr>
-													<td>2° SEMANA</td>
-													<td>8.500 $ (10% off)</td>
-												</tr>
-												<tr>
-													<td>MENSUAL</td>
-													<td>15.000 $ 
-												</tr>
-				
-											</tbody>
-										</table>
-									</div>
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/Uxl1QG0JpnA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 								</section>
 								<section>
-									<h3>FORMAS DE PAGO</h3>
-										<ul>
-											<li>CONTADO/EFECTIVO</li>
-											<li>MERCADO PAGO (10% de interés)</li>
-											<li>POR TRANSFERENCIA BANCARIA</li>
-										</ul>
-										<blockquote><STRONG>El cupo será reservado abonando el 50% de la inscripción.</STRONG></blockquote>
-
 									<h4>NO TE QUEDES SIN TU LUGAR, SERÁ UN VERANO INNOLVIDABLE!!!</h4>
 									<ul class="actions special">
-										<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdhw3tcOAzo9lEDAb6q3wtGHw5vDTSEyXbGBkDlIPkRS9WrzA/viewform?vc=0&c=0&w=1" target="none" class="button primary">INSCRIBITE</a></li>
+										<li><a href="https://docs.google.com/forms/d/1_MpxA7KcOrIctma2TaivkP7YuRRmunAvyLAbcY0UNrQ/edit?usp=sharing" target="none" class="button primary">INSCRIBITE</a></li>
 									</ul>
 								</section>
 							</div>
