--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Una propuesta turística y educativa<br/>
-								basada en aprendizajes y vivencias sobre el MAR y la PLAYA<br/>
-								contamos con un equipo exclusivamente conformado por PROFESIONALES<br/>
+								basada en aprendizajes y vivencias sobre el MAR y la PLAYA.<br/>
+								contamos con un equipo exclusivamente conformado por PROFESIONALES:<br/>
 								GUARDAVIDAS, DOCENTES E INSTRUCTORES CERTIFICADOS</h2>
 							</header>
 							<ul class="icons major">
