--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/pic.02.jpg" alt="" /></div><div class="content">
 								<h2>SALVAMENTO JUNIOR</h2>
 								<p>Una escuela que se basa en aprendizajes vivenciales en el MAR.<br />
 								Prácticas deportivas que incluyen natación, preparación física en la arena y salvamento, como parte de la formación integral para que, quienes hagan la experiencia, sepan desenvolverse en el medio acuático con seguridad, así como también actúen de forma correcta ante cualquier situación de emergencia. <a href="escuelita.html" target="none"><blockquote>Más información...</blockquote></a></p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/pic.03.jpg" alt="" /></div><div class="content">
 								<h2>ESCUELITA DE MAR</h2>
 								<p>La Escuelita de Mar es una actividad donde, a través de diferentes juegos, los niños y niñas conocen, aprenden y experimentan las primeras ideas sobre el salvamento acuático, el surf y el bodyboard.<br/>
 								<a href="escuelita.html" target="none"><blockquote>Más información...</blockquote></a></p>
