--- a/escuelita.html
+++ b/escuelita.html
@@ -66,9 +66,13 @@
 										</ul>
 									</P>
 								</section>
+							</div>
+							<div class="inner">	
 								<section>
 									<iframe width="560" height="315" src="https://www.youtube.com/embed/Uxl1QG0JpnA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 								</section>
+							</div>	
+							<div class="inner">
 								<section>
 									<h4>NO TE QUEDES SIN TU LUGAR, SERÁ UN VERANO INNOLVIDABLE!!!</h4>
 									<ul class="actions special">
