--- a/escuelita.html
+++ b/escuelita.html
@@ -41,7 +41,7 @@
 
 				<!-- Main -->
 					<article id="main">
-						<header style='background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(./images/pic03.jpg);'>
+						<header style='background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(./images/pic.05.jpg);'>
 							<h2>ESCUELA DE MAR</h2>
 							<ul class="actions special">
 								<li><a href="https://docs.google.com/forms/d/1_MpxA7KcOrIctma2TaivkP7YuRRmunAvyLAbcY0UNrQ/edit?usp=sharing" target="none" class="button primary">INSCRIBITE</a></li>
@@ -74,7 +74,7 @@
 							</div>	
 							<div class="inner">
 								<section>
-									<h4>NO TE QUEDES SIN TU LUGAR, SERÁ UN VERANO INNOLVIDABLE!!!</h4>
+									<h4 style="text-align:center">NO TE QUEDES SIN TU LUGAR, SERÁ UN VERANO INNOLVIDABLE!!!</h4>
 									<ul class="actions special">
 										<li><a href="https://docs.google.com/forms/d/1_MpxA7KcOrIctma2TaivkP7YuRRmunAvyLAbcY0UNrQ/edit?usp=sharing" target="none" class="button primary">INSCRIBITE</a></li>
 									</ul>
