--- a/escuelita.html
+++ b/escuelita.html
@@ -67,9 +67,9 @@
 									</P>
 								</section>
 							</div>
-							<div class="inner">	
-								<section align= "center">
-									<iframe width="560" height="315" src="https://www.youtube.com/embed/Uxl1QG0JpnA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<div class="contenedor-responsivo">	
+								<section>
+									<iframe class="contenedor-responsivo" src="https://www.youtube.com/embed/Uxl1QG0JpnA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 								</section>
 							</div>	
 							<div class="inner">
