--- a/escuelita.html
+++ b/escuelita.html
@@ -69,7 +69,7 @@
 							</div>
 							<div class="contenedor-responsivo">	
 								<section>
-									<iframe class="contenedor-responsivo" src="https://www.youtube.com/embed/Uxl1QG0JpnA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									<iframe class="iframe-responsivo" src="https://www.youtube.com/embed/Uxl1QG0JpnA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 								</section>
 							</div>	
 							<div class="inner">
