--- a/escuelita.html
+++ b/escuelita.html
@@ -53,11 +53,11 @@
 								<section>
 									<h3>CURSO DE VERANO 2023</h3>
                                         <ul>
-                                            <li>LUGAR: Parador PRISMA BEACH, Juan Domingo Perón 208 <a href="https://www.google.com/maps/place/Parador+Prisma+Beach/@-38.9858191,-61.3078785,14z/data=!4m8!1m2!2m1!1sprisma+beach+monte+hermoso!3m4!1s0x0:0xadaa24fc21d0c216!8m2!3d-38.9892317!4d-61.2896293" target="none">. Conoce como llegar.</li>
+                                            <li>LUGAR: Parador PRISMA BEACH, Juan Domingo Perón 208 <a href="https://www.google.com/maps/place/Parador+Prisma+Beach/@-38.9858191,-61.3078785,14z/data=!4m8!1m2!2m1!1sprisma+beach+monte+hermoso!3m4!1s0x0:0xadaa24fc21d0c216!8m2!3d-38.9892317!4d-61.2896293" target="none">. Conocé cómo llegar.</li>
                                             <li>DÍAS: Lunes, Miércoles y Viernes.</li>
-                                            <li>DÍAS SALVAMENTO ADULTXS: A confirmar...</li>
-                                            <li>HORARIO: de 10 a 13 hs.</li>
-                                            <li>EDADES: de 5 a 17 años y > de 18 años Salvamento adultxs.</li>
+                                            <li>EDADES: de 5 a 17 años</li>
+                                            <li>HORARIO: de 10 a 13 hs</li>
+                                            <li>SALVAMENTO ADULTXS: mayores de 18 años. Días y horarios a confirmar</li>
                                                                                     </ul>
 									<P>El programa puede ser diario o semanal e incluye:
 										<ul>
