--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic04.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/pic.04.jpg" alt="" /></div><div class="content">
 								<h2>SALVAMENTO ADULTOS</h2>
 								<p>El deporte es salud, entrenar en grupos es motivador, la energía se multiplica. Para los adultos que no quieren quedarse afuera, este año sumamos actividades para quienes son amantes de la natación y el mar.<a href="escuelita.html" target="none"><blockquote>Más información...</blockquote></a></p>
 							</div>
